<resources>
    <string name="app_name">Registro</string>
    <string name="title">Formulario</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="warning">Campo Requerido</string>
    <string name="save">Guardar</string>
    <string name="info">Nombre Usuario</string>
    <string name="email_error">Digite un correo</string>
    <string name="password_error">NO coinciden</string>
    <string name="incomplete_error">Datos Incompletos</string>
    <string name="required">Campo Requerido</string>
    <string name="genre">Gènero</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="hobbies">Pasatiempos</string>
    <string name="sport">Deporte</string>
    <string name="read">Leer</string>
    <string name="eat">Comer</string>
    <string name="dance">Bailar</string>
    <string name="birthday">Fecha de Nacimiento:</string>
    <string name="default_date">03/20/2021</string>
    <string name="city">"Ciudad: "</string>
    <string-array name="city_list">
        <item>"Bogota D.C."</item>
        <item>"Medellin"</item>
        <item>"Cartagena"</item>
        <item>"Cali"</item>
        <item>"Barranquilla"</item>
        <item>"Bucaramanga"</item>
        <item>"Pasto"</item>
        <item>"Pereira"</item>
    </string-array>



</resources>